fix: update hardhat config

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "compile": "hardhat compile",
     "clean": "hardhat clean",
-    "test": "yarn hardhat test",
-    "test-staging": "yarn hardhat test --network goerli",
-    "lint": "yarn solhint 'contracts/*.sol'",
-    "lint:fix": "yarn solhint 'contracts/**/*.sol' --fix",
-    "format": "yarn prettier --write .",
-    "coverage": "yarn hardhat coverage"
+    "deploy": "hardhat deploy --network mumbai",
+    "test": "hardhat test",
+    "test-staging": "hardhat test --network goerli",
+    "lint": "solhint 'contracts/*.sol'",
+    "lint:fix": "solhint 'contracts/**/*.sol' --fix",
+    "format": "prettier --write .",
+    "coverage": "hardhat coverage"
   },
   "license": "MIT",
   "devDependencies": {
